fix alignment

--- a/main.sass
+++ b/main.sass
@@ -13,6 +13,10 @@ body
   color: black
   background-color: rgba(44,68,107,.8)
 .panel-body
-  color rgb(3, 81, 65)  
+  color: rgb(3, 81, 65)  
   background-image: url("http://wallpaperlayer.com/img/2015/11/thumb/subtle-ios-7-wallpaper-5104-5346-hd-wallpapers-thumb.jpg")
-  background-size: 100%
+  background-color: rgba(44,68,107,.8)
+  background-repeat: no-repeat
+  background-position-y: 10px
+.form
+  text-align: center
